[package]
name = "mremote"
version = "0.1.0"
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true

[dependencies]
cortex-m-rt = "0.5.1"
panic-semihosting = "0.3.0"
embedded-hal = "0.2.1"
cortex-m = "0.5.2"
nb = "0.1.1"
embedded-graphics = "0.1.1"
alloc-cortex-m = "0.3.5"

[dependencies.stm32f103xx-hal]
git = "https://github.com/chocol4te/stm32f103xx-hal.git"
rev = "ce4f839"

#[dependencies.cortex-m-rtfm]
#git = "https://github.com/japaric/cortex-m-rtfm"
#branch = "tq"
#features = ["timer-queue"]

#[dependencies.stm32f103xx]
#features = ["rt"]
#version = "0.10.0"

[dependencies.ssd1306]
git = "https://github.com/jamwaffles/ssd1306.git"
rev = "70a76dc"
features = ["graphics"]
