[package]
name = "mremote"
version = "0.1.0"
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]

[[bin]]
name = "controller"
path = "src/controller/main.rs"

[[bin]]
name = "receiver"
path = "src/receiver/main.rs"

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
opt-level = 3
codegen-units = 1
debug = true
lto = true

[dependencies]
cortex-m-rt = "0.5.1"
panic-semihosting = "0.3.0"
embedded-hal = "0.2.1"
cortex-m = "0.5.2"
nb = "0.1.1"
embedded-graphics = "0.1.1"
alloc-cortex-m = "0.3.5"
cortex-m-semihosting = "0.3.0"
byteorder = { version = "1.2.3", default-features = false }

[dependencies.pruefung]
git = "https://github.com/chocol4te/pruefung.git"
rev = "ee29dc7"
features = ["crc"]

[dependencies.stm32f103xx-hal]
git = "https://github.com/chocol4te/stm32f103xx-hal.git"
rev = "ce4f839"

#[dependencies.cortex-m-rtfm]
#git = "https://github.com/japaric/cortex-m-rtfm"
#branch = "tq"
#features = ["timer-queue"]

#[dependencies.stm32f103xx]
#features = ["rt"]
#version = "0.10.0"

[dependencies.ssd1306]
git = "https://github.com/jamwaffles/ssd1306.git"
rev = "70a76dc"
features = ["graphics"]

[dependencies.cc1101]
git = "https://github.com/chocol4te/cc1101.git"
rev = "c3f0cdf"
