[package]
authors = ["ferdiamckeogh"]
edition = "2018"
readme = "README.md"
name = "interrupt-toggle"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"
stm32f103xx-hal = { git = "https://github.com/japaric/stm32f103xx-hal", features = ["rt"] }
cortex-m-rtfm = { version = "0.4.0", features = ["timer-queue"] }
embedded-hal = "0.2.2"
ssd1306 = "0.2.2"
embedded-graphics = "0.4.5"
alloc-cortex-m = "0.3.5"
numtoa = "0.2.3"

[[bin]]
name = "interrupt-toggle"
test = false
bench = false

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true
