[package]
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]
edition = "2018"
name = "controller"
version = "0.0.1"

[[bin]]
name = "controller"
test = false
bench = false

[dependencies]
panic-semihosting = "0.5.1"
cortex-m-rtfm = { version = "0.4.2", features = ["timer-queue"] }
nrf52810-hal = { git = "https://github.com/nrf-rs/nrf52-hal.git", rev = "8fd099f", features = ["rt"] }
ssd1306 = "0.2.4"
embedded-graphics = "0.4.7"
cortex-m-rt = "0.6.7"
