[package]
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]
edition = "2018"
name = "receiver"
version = "0.0.1"

[[bin]]
name = "receiver"
test = false
bench = false

[dependencies]
panic-semihosting = "0.5.1"
cortex-m-rtfm = { version = "0.4.2", features = ["timer-queue"] }
cortex-m-semihosting = "0.3.2"
nrf52810-hal = { git = "https://github.com/nrf-rs/nrf52-hal.git", rev = "8fd099f", features = ["rt"] }
