[package]
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]
edition = "2018"
name = "receiver"
version = "0.0.1"

[[bin]]
name = "receiver"
test = false
bench = false

[dependencies]
cortex-m = "0.6.0"
cortex-m-semihosting = "0.3.2"
cortex-m-rtfm = "0.4.2"
cortex-m-rt = "0.6.7"
embedded-hal = "0.2.2"
nrf52810-hal = { git = "https://github.com/chocol4te/nrf52-hal", rev = "f92e4ea", features = ["rt"] }
nb = "0.1.1"
fpa = "0.1.0"
byteorder = { version = "1.3.1", default-features = false }
panic-semihosting = "0.5.1"
bitflags = "1.0.4"
uuid = { version = "0.7.4", default-features = false }
vesc-comm = "0.1.1"
